plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'ce216game'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'ce216game.demo'
  mainClass = 'ce216game.demo.HelloApplication'
}

javafx {
  version = '21'
  modules = ['javafx.controls', 'javafx.fxml']
}

// Test bağımlılıkları
dependencies {
  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
  implementation files('libs/json-20250107.jar')
  implementation 'org.json:json:20210307'

}

test {
  useJUnitPlatform()
}

// JLink yapılandırması
jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher {
    name = 'app'
  }
}

// JLink Zip dağıtımı
jlinkZip {
  group = 'distribution'
}

// JavaFX için JVM argümanlarını ekleyin
tasks.withType(JavaExec) {
  jvmArgs = [
          '--module-path', configurations.runtimeClasspath.asPath,
          '--add-modules', 'javafx.controls,javafx.fxml'
  ]
}
